feat(core): add service monitor, topology introspection, and option surface APIs
- Add service monitor open/recv/close for per-service event monitoring
- Add registry topology snapshot/query and query client APIs
- Add per-service option constants and set_option/set_routing_id/routing_id
- Add poller integration for spot_sub, spot_pub, gateway, receiver, monitor
- Add service_monitor internal implementation
- Sync bindings perf benchmarks for core v4.0.2 changes
- Fix doc API references: zlink_msgv_close -> zlink_multipart_close,
  zlink_threadstart -> zlink_thread_start, zlink_threadclose -> zlink_thread_join
- Add missing API docs for receiver, gateway, spot option/routing_id/peers
- Add full service monitor and registry topology docs (EN/KO)
- Add planning docs for topology reporting runtime, service monitor readiness,
  routing ID policy, option surface, registry introspection, bindings migration
- Add service introspection tests for core and spot

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>